--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-wordpress": "^7.8.0",
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9"
   }
