--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
-    "framer-motion": "^10.8.4",
-    "gatsby": "^5.7.0",
-    "gatsby-plugin-image": "^3.7.0",
-    "gatsby-plugin-sharp": "^5.7.0",
-    "gatsby-plugin-sitemap": "^6.7.0",
-    "gatsby-plugin-styled-components": "^6.7.0",
-    "gatsby-source-filesystem": "^5.7.0",
+    "framer-motion": "^10.10.0",
+    "gatsby": "^5.8.1",
+    "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-sharp": "^5.8.1",
+    "gatsby-plugin-sitemap": "^6.8.0",
+    "gatsby-plugin-styled-components": "^6.8.0",
+    "gatsby-source-filesystem": "^5.8.0",
     "gatsby-source-wordpress": "^7.8.0",
-    "gatsby-transformer-sharp": "^5.7.0",
+    "gatsby-transformer-sharp": "^5.8.0",
     "react": "^18.2.0",
-    "react-datepicker": "^4.10.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
