--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
     "framer-motion": "^10.10.0",
     "gatsby": "^5.8.1",
@@ -28,6 +29,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "styled-components": "^5.3.9",
     "yarn-upgrade-all": "^0.7.2"
   }
