--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "babel-plugin-styled-components": "^2.0.7",
     "framer-motion": "^10.10.0",
     "gatsby": "^5.8.1",
+    "gatsby-plugin-google-tagmanager": "^5.8.0",
     "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-plugin-styled-components": "^6.8.0",
+    "gatsby-plugin-yoast-sitemap": "^0.0.2",
     "gatsby-source-filesystem": "^5.8.0",
     "gatsby-source-wordpress": "^7.8.0",
     "gatsby-transformer-sharp": "^5.8.0",
