--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "framer-motion": "^10.10.0",
     "gatsby": "^5.8.1",
+    "gatsby-plugin-brotli": "^2.1.0",
     "gatsby-plugin-google-tagmanager": "^5.8.0",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
